@startuml
package JAVAOOP {

    class Publication {
        - String publisher
        - int numberOfPages
        - double price
        - String title

        + Publication(String publisher, int numberOfPages, double price, String title)
        + void print()
    }

    class Magazine {
        - String publicationUnit

        + Magazine(String publisher, int numberOfPages, double price, String title, String publicationUnit)
        + void print()
    }

    class Book {
        - String author

        + Book(String publisher, int numberOfPages, double price, String title, String author)
        + void print()
    }

    class KidsMagazine {
        - int ageRange

        + KidsMagazine(String publisher, int numberOfPages, double price, String title, int ageRange)
        + void print()
    }

    class TestPublication {
        + static void main(String[] args)
    }

    Publication <|-- Magazine
    Publication <|-- Book
    Publication <|-- KidsMagazine
    TestPublication --> Publication : uses

}
@enduml
